# Flask_Todo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.override.yml  docker-compose.yml  main.py  project_structure.txt  project_summary.md  pyproject.toml  requirements.txt
instance/: config.example.py  config.py
static/: style.css
templates/: index.html
todo/: __init__.py  auth.py  models.py  views.py
todo/static/: style.css
todo/templates/: base.html  edit.html  index.html  login.html  register.html
